--- a/html/view/index.html
+++ b/html/view/index.html
@@ -12,7 +12,7 @@
     <title>PWS | Personal Weather Station</title>
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.css" rel="stylesheet">
     <link href="../css/view.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -41,8 +41,8 @@
             <li><a href="#">Setup Your Own</a></li>
             <li><a href="#">Support Us</a></li>
           </ul>
-          <form class="navbar-form navbar-right">
-            <input type="text" class="form-control" placeholder="Search...">
+          <form class="navbar-form navbar-right" id="StationIDSearch">
+            <input type="text" class="form-control" placeholder="Station Id">
           </form>
         </div>
       </div>
